--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 asgiref==3.5.2
-backports.zoneinfo==0.2.1;python_version<"3.9"
+backports.zoneinfo==0.2.1
 beautifulsoup4==4.9.3
 boto==2.49.0
 boto3==1.24.89
@@ -7,8 +7,10 @@ botocore==1.27.89
 bs4==0.0.1
 certifi==2022.9.24
 charset-normalizer==2.1.1
+dj-database-url==1.0.0
 Django==4.1.2
 django-crispy-forms==1.14.0
+django-heroku==0.3.1
 django-storages==1.13.1
 gunicorn==20.1.0
 idna==3.4
@@ -17,6 +19,7 @@ node==0.9.28
 odict==1.8.0
 Pillow==9.2.0
 plumber==1.6
+psycopg2==2.9.4
 python-dateutil==2.8.2
 pytz==2020.1
 requests==2.28.1
@@ -26,6 +29,7 @@ soupsieve==2.2.1
 sqlparse==0.3.1
 tzdata==2022.4
 urllib3==1.26.12
+whitenoise==6.2.0
 zope.component==5.0.1
 zope.deprecation==4.4.0
 zope.event==4.5.0
